JumpScript/tests/baselines/reference/functionWithDefaultParameterWithNoStatements9.errors.txt
tests/cases/compiler/functionWithDefaultParameterWithNoStatements9.jump(1,18): error TS2304: Cannot find name 'console'.
tests/cases/compiler/functionWithDefaultParameterWithNoStatements9.jump(3,18): error TS2304: Cannot find name 'console'.


==== tests/cases/compiler/functionWithDefaultParameterWithNoStatements9.jump (2 errors) ====
    function foo(a = console.log) { }
                     ~~~~~~~
!!! error TS2304: Cannot find name 'console'.
    
    function bar(a = console.log) {
                     ~~~~~~~
!!! error TS2304: Cannot find name 'console'.
    }